# local-AI-SML

./: README.md  Results.md  index.html  package-lock.json  package.json  update_tauri_config.py
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: inference.rs  lib.rs  main.rs  model_download.rs
src/components/: ChatArea.tsx  InputBar.tsx  SettingsModal.tsx  Sidebar.tsx  TerminalHeader.tsx
src/hooks/: useModels.ts  useSessions.ts  useSettings.ts
src/styles/: theme.css
webui/: package-lock.json  package.json  svelte.config.js  vite.config.ts
webui/src/lib/: server-url.ts  tauri-bridge.ts
webui/src/lib/components/app/: TauriModelSelector.svelte
webui/src/lib/components/app/chat/ChatForm/: ChatForm.svelte
webui/src/lib/components/app/chat/ChatForm/ChatFormActions/: ChatFormActionSubmit.svelte  ChatFormActions.svelte
webui/src/lib/components/app/chat/ChatMessages/: ChatMessageActions.svelte
webui/src/lib/components/app/chat/ChatSettings/: ChatSettings.svelte  ChatSettingsFooter.svelte  ChatSettingsImportExportTab.svelte
webui/src/lib/components/app/chat/ChatSidebar/: ChatSidebar.svelte  ChatSidebarActions.svelte  ChatSidebarConversationItem.svelte
webui/src/lib/constants/: settings-config.ts
webui/src/lib/enums/: ui.ts
webui/src/lib/services/: chat.service.ts
webui/src/lib/utils/: api-fetch.ts
webui/src/routes/: +layout.svelte  +page.svelte
