[package]
name = "sumrzr"
version = "0.1.0"
description = "Sumrzr – Lokal AI-mötessummerare"
authors = ["mrswedish"]
edition = "2021"

[lib]
name = "sumrzr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[features]
default = []
metal = []
vulkan = []
